--- a/index.html
+++ b/index.html
@@ -222,39 +222,35 @@
 </section>
 
 <!--sucursales-->
-<section id="gallery">
-  <div class="container gallery-container">
-  
-    <h1>Sucursales</h1>
-  
-    <p class="page-description text-center">Te presentamos nuestras sucursales localizadas en Nuevo León</p>
-    
-    <div class="tz-gallery">
-  
-        <div class="row">
-            <div class="col-sm-6 col-md-6 wow fadeIn">
-                <a class="lightbox" target="_blank" href="https://www.google.com/maps/place/HOES+ENGLISH+CENTER/@25.6841202,-100.2836587,15z/data=!4m2!3m1!1s0x0:0x7141b879ba44dae2?sa=X&ved=2ahUKEwj475ajk93sAhUBV80KHTmqAKIQ_BIwCnoECBAQBQ">
-                  <h3>Unidad Monterrey</h13>
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14382.452034640472!2d-100.2836587!3d25.6841202!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7141b879ba44dae2!2sHOES%20ENGLISH%20CENTER!5e0!3m2!1ses-419!2smx!4v1603921255655!5m2!1ses-419!2smx" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"><a href="https://www.google.com/maps/place/HOES+ENGLISH+CENTER/@25.6841202,-100.2836587,15z/data=!4m5!3m4!1s0x0:0x7141b879ba44dae2!8m2!3d25.6841202!4d-100.2836587"></a></iframe> 
-                </a>
-            </div>
-            <div class="col-sm-6 col-md-4 wow fadeIn">
-                <a class="lightbox" target="_blank" href="https://www.google.com/maps/place/Hoes+English+Center/@25.6378182,-100.1466663,15z/data=!4m2!3m1!1s0x0:0xcec92369d694e351?sa=X&ved=2ahUKEwiJs7bdk93sAhWUQc0KHcWADf0Q_BIwE3oECBAQBQ">
-                  <h3>Unidad Juárez</h3>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14388.037037539229!2d-100.1466663!3d25.6378182!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcec92369d694e351!2sHoes%20English%20Center!5e0!3m2!1ses-419!2smx!4v1603921388379!5m2!1ses-419!2smx" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                 
-                </a>
-            </div>
-            <div class="col-sm-12 col-md-4 wow fadeIn">
-                <a class="lightbox" target="_blank" href="https://www.google.com/maps/place/HOES+English+Center+Ci%C3%A9nega+De+Flores/@25.9560455,-100.1645534,15z/data=!4m2!3m1!1s0x0:0xaf45fe8f4c9c145a?sa=X&ved=2ahUKEwiEu8Prk93sAhVZa80KHRZcAxUQ_BIwCnoECA8QAw">
-                  <h3>Unidad Cienega de Flores</h3>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14349.46263890992!2d-100.1645534!3d25.9560455!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xaf45fe8f4c9c145a!2sHOES%20English%20Center%20Ci%C3%A9nega%20De%20Flores!5e0!3m2!1ses-419!2smx!4v1603921443138!5m2!1ses-419!2smx" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>   
-                </a>
-            </div>
+<section id="sucursales">
+  <div class="container sucursales-container">
+   <h1>Nuestras sucursales</h1>
+   <p class="page-description text-center">Te presentamos algunos de nuestros alumnos acreditados.</p>
+   <div class="tz-sucursales"> 
+    <div class="row">
+      <div class="col-md-6 wow fadeIn">
+        <h3>Unidad Monterrey</h3>
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14382.452034640472!2d-100.2836587!3d25.6841202!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7141b879ba44dae2!2sHOES%20ENGLISH%20CENTER!5e0!3m2!1ses-419!2smx!4v1604094538695!5m2!1ses-419!2smx" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      </div>
+      </div>
+      <div class="col-md-6 wow fadeIn">
+        <h3>Unidad Juárez</h3>
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14388.037037539229!2d-100.1466663!3d25.6378182!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcec92369d694e351!2sHoes%20English%20Center!5e0!3m2!1ses-419!2smx!4v1604094610242!5m2!1ses-419!2smx" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
-    </div>
+      </div>
+      <div class="col-md-6 wow fadeIn">
+        <h3>Unidad Cienéga de Flores</h3>
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14349.46263890992!2d-100.1645534!3d25.9560455!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xaf45fe8f4c9c145a!2sHOES%20English%20Center%20Ci%C3%A9nega%20De%20Flores!5e0!3m2!1ses-419!2smx!4v1604094740085!5m2!1ses-419!2smx" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
+      </div>
+   </div>
+   </div>
   </div>
-  </section>
+
+</section>
 
 <!------contact-->
 <section class="get_in_touch">
