--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <a href="https://wa.me/528115919883?text=Me%20gustaría%20saber%20el%20precio%20del%20" class="whatsapp" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
 <!--header-->
 <section id="header">
-    <nav class="navbar navbar-light">
+    <nav class="navbar navbar-light bg-dark fixed-top"> 
         <a class="navbar-brand" href="#"><img src="./images/logohoes.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
@@ -39,13 +39,13 @@
               <a class="nav-link" href="#about">Beneficios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#services">Servicios</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#features">Contacto</a>
+              <a class="nav-link" href="#services">Nuestra Historia</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#gallery">Galería</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#sucursales">Ubicaciones</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#footer">Contacto</a>
