--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 <!---Welcome text------->
 <section id="welcome">
   <div class="container">
+    <div class="shape-01">
+
+    </div>
     <div class="welcome text-center wow slideInLeft">
     <h1 class="wow bounceInLeft delay-2s">Hoes English Center</h1>
     <p class="wow bounceInRight delay-2s"><strong>¡SUPERATE EN HABLAR INGLÉS!</strong></p>
