--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
    <div class="contact-form row">
       <div class="form-field col-lg-6">
         <input class="w3-input w3-border" name="first" type="text" placeholder="Nombre">
-        <label for="name" class="name">Nombre</label><span class="asterisk_input"> 
+        <label for="name" class="name">Nombre y Apellido</label><span class="asterisk_input"> 
       </div>
       <div class="form-field col-lg-6">
         <input class="w3-input w3-border" name="last" type="text" placeholder="Apellido">
