--- a/index.html
+++ b/index.html
@@ -263,14 +263,14 @@
    <div class="contact-form row">
       <div class="form-field col-lg-6">
         <input class="w3-input w3-border" name="first" type="text" placeholder="Nombre">
-        <label for="name" class="name">Nombre y Apellido</label><span class="asterisk_input"> 
+        <label for="name" class="name">Nombre</label><span class="asterisk_input"> 
       </div>
       <div class="form-field col-lg-6">
-        <input class="w3-input w3-border" name="last" type="text" placeholder="Apellido">
-        <label for="name" class="name">Correo electrónico</label><span class="asterisk_input"> 
+        <input class="w3-input w3-border" name="last" type="text" placeholder="email">
+        <label for="name" class="name">E-mail</label><span class="asterisk_input"> 
       </div>
       <div class="form-field col-lg-6">
-        <input class="w3-input w3-border" name="email" type="text" placeholder="Correo Electrónico"> 
+        <input class="w3-input w3-border" name="email" type="text" placeholder="telefono"> 
         <label for="name" class="name">Teléfono</label><span class="asterisk_input"> 
       </div>
       <div class="form-field col-lg-6">
